# autonomous_drone_ros2

./: .gitignore  Autonomous_Drone_POC.docx  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  drone_wsl_setup.sh  launch_full_sim.sh  manual_6_terminals.sh
docker/: Dockerfile
docs/architecture/: node_architecture.md
docs/milestones/: roadmap.md
docs/setup/: hardware_deployment.md  installation.md
scripts/: build.sh  generate_aruco.py  setup_gazebo.sh
simulation/gazebo/models/aruco_17/: model.config  model.sdf
simulation/gazebo/models/aruco_pad_B/: model.config  model.sdf
simulation/gazebo/models/aruco_pad_C/: model.config  model.sdf
simulation/gazebo/models/aruco_pad_D/: model.config  model.sdf
simulation/gazebo/models/aruco_pad_E/: model.config  model.sdf
simulation/gazebo/models/aruco_pad_F/: model.config  model.sdf
simulation/gazebo/worlds/: aruco_city.sdf  aruco_landing.sdf
src/autonomous_drone_ros2/drone_base/: package.xml  setup.cfg  setup.py
src/autonomous_drone_ros2/drone_base/drone_base/: drone_base_node.py
src/autonomous_drone_ros2/drone_bringup/: package.xml  setup.cfg  setup.py
src/autonomous_drone_ros2/drone_bringup/drone_bringup/: px4_stack.py
src/autonomous_drone_ros2/drone_bringup/launch/: drone_nodes.launch.py  full_mission.launch.py  full_stack.launch.py  px4_sitl.launch.py  vision.launch.py
src/autonomous_drone_ros2/drone_camera/: package.xml  setup.cfg  setup.py
src/autonomous_drone_ros2/drone_camera/drone_camera/: camera_node.py
src/autonomous_drone_ros2/drone_controller/: package.xml  setup.cfg  setup.py
src/autonomous_drone_ros2/drone_controller/drone_controller/: aruco_landing_node.py  waypoint_navigator.py
src/autonomous_drone_ros2/drone_interfaces/: package.xml  setup.cfg  setup.py
src/autonomous_drone_ros2/drone_interfaces/drone_interfaces/: aruco_marker.py  constants.py  geo.py  gz_spawn.py
src/autonomous_drone_ros2/drone_mission/: package.xml  setup.py
src/autonomous_drone_ros2/drone_mission/drone_mission/: failsafe_monitor.py  mission_manager.py  mission_new
src/autonomous_drone_ros2/drone_msgs/: package.xml  setup.cfg  setup.py
src/autonomous_drone_ros2/drone_navigation/: package.xml  setup.cfg  setup.py
src/autonomous_drone_ros2/drone_navigation/drone_navigation/: navigation_node.py
src/autonomous_drone_ros2/drone_vision/: package.xml  setup.cfg  setup.py
src/autonomous_drone_ros2/drone_vision/drone_vision/: vision_node.py
x500_lidar_cam_down/: model (copy).sdf  model.sdf
