<?xml version="1.0"?>
<package format="3">
  <name>drone_bringup</name>
  <version>1.0.0</version>
  <description>Launch files for full autonomous drone mission</description>
  <maintainer email="aadhi4200@github.com">Aadhi</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>drone_base</exec_depend>
  <exec_depend>drone_camera</exec_depend>
  <exec_depend>drone_vision</exec_depend>
  <exec_depend>drone_controller</exec_depend>
  <exec_depend>drone_mission</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
