<?xml version="1.0"?>
<package format="3">
  <name>drone_camera</name>
  <version>1.0.0</version>
  <description>Gazebo camera bridge and image publisher</description>
  <maintainer email="aadhi4200@github.com">Aadhi</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend><depend>cv_bridge</depend><depend>std_msgs</depend>
  <depend>drone_interfaces</depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <export><build_type>ament_python</build_type></export>
</package>
