<?xml version="1.0"?>
<package format="3">
  <name>drone_controller</name>
  <version>1.0.0</version>
  <description>WaypointNavigator and ArucoLandingNode</description>
  <maintainer email="aadhi4200@github.com">Aadhi</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>mavros_msgs</depend><depend>geometry_msgs</depend><depend>nav_msgs</depend><depend>std_msgs</depend>
  <depend>drone_interfaces</depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <export><build_type>ament_python</build_type></export>
</package>
