<?xml version="1.0"?>
<package format="3">
  <name>drone_interfaces</name>
  <version>1.0.0</version>
  <description>Shared ROS2 interfaces, constants and utilities</description>
  <maintainer email="aadhi4200@github.com">Aadhi</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>std_msgs</depend><depend>geometry_msgs</depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <export><build_type>ament_python</build_type></export>
</package>
