<?xml version="1.0"?>
<package format="3">
  <name>drone_mission</name>
  <version>1.0.0</version>
  <description>MissionManager — full A→B→C→D→Home orchestration</description>
  <maintainer email="aadhi4200@github.com">Aadhi</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>mavros_msgs</depend><depend>nav_msgs</depend><depend>std_msgs</depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <export><build_type>ament_python</build_type></export>
</package>
