<?xml version="1.0"?>
<package format="3">
  <name>drone_navigation</name>
  <version>1.0.0</version>
  <description>Advanced nav — Nav2, path planning, obstacle avoidance (Phase 5+)</description>
  <maintainer email="aadhi4200@github.com">Aadhi</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>nav_msgs</depend><depend>geometry_msgs</depend><depend>std_msgs</depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <export><build_type>ament_python</build_type></export>
</package>
