<?xml version="1.0"?>
<package format="3">
  <name>drone_vision</name>
  <version>1.0.0</version>
  <description>ArUco ID=17 detection and landing target publisher</description>
  <maintainer email="aadhi4200@github.com">Aadhi</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend><depend>cv_bridge</depend><depend>geometry_msgs</depend><depend>std_msgs</depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <export><build_type>ament_python</build_type></export>
</package>
